Quorum/Library/Tests/Actions/Pass/CastReturn.quorum
class Main
    action Main
        number k = foo(1)
        output k
    end

    action foo(integer x) returns number
        return x
    end
end