Quorum/Library/Tests/Actions/Fail/A2.quorum
class A 
    action GetThing returns number
        return 0
    end
end